feat(layout): I added the register

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,4 +1,3 @@
-<div class="container mat-elevation-z8">
   <h1>Iniciar sesión</h1>
   <form [formGroup]="form" (ngSubmit)="login()">
     <mat-form-field class="w-100" appearance="outline">
@@ -11,7 +10,6 @@
     </mat-form-field>
     <div>
       <button type="submit" mat-raised-button>Ingresar</button>
-      <button type="button" mat-raised-button>Crea una cuenta</button>
+      <button type="button" mat-raised-button routerLink="/auth/register">Crea una cuenta</button>
     </div>
   </form>
-</div>
