--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,4 +1,4 @@
-<app-toolbar [menus]="menus"></app-toolbar>
+<app-toolbar></app-toolbar>
 <div class="container mat-elevation-z8">
   <router-outlet></router-outlet>
 </div>
